--- a/config/main.css
+++ b/config/main.css
@@ -3,9 +3,9 @@
 @import url("https://fonts.googleapis.com/css2?family=Ubuntu:ital,wght@0,300;0,400;0,500;0,700;1,300;1,400;1,500;1,700&display=swap");
 
 :root {
-  --background-color: #003ba8 !important;
+  --background-color: #808080 !important;
   --text-color: white !important;
-  --accent-color: #4b87f7 !important;
+  --accent-color: #D3AF37 !important;
 }
 
 
