--- a/config/main.css
+++ b/config/main.css
@@ -4,7 +4,7 @@
 
 :root {
   --background-color: #808080 !important;
-  --text-color: white !important;
+  --text-color: #D3AF37 !important;
   --accent-color: #D3AF37 !important;
 }
 
